Tarea 1, fimando commits

--- a/Tareas/Tarea1/curriculum.html
+++ b/Tareas/Tarea1/curriculum.html
@@ -21,7 +21,11 @@
                 <li><strong>Fecha de Nacimiento:</strong> 9 de septiembre de 2004</li>
                 <li><strong>Edad:</strong> 19 años</li>
                 <li><strong>Nacionalidad:</strong> Salvadoreño</li>
-                <li><strong>Estudios:</strong> Bachillerato General</li>
+                <li><strong>Carrera:</strong> Ingenieria Informatica</li>
+                <li><strong>Año de Estudio:</strong> Segundo año</li>
+                <li><strong>Carnet:</strong> 00367123</li>
+                <li><strong>Correo:</strong> 00367123@uca.edu.sv</li>
+                <li><strong>Github:</strong> <a href="https://github.com/EduardoL115" target="_blank">EduardoL115</a></li>
             </ul>
         </div>
         <div class="section">
@@ -41,9 +45,27 @@
                 Me apasiona profundamente programar y aprender sobre este mundo. Disfruto mucho 
                 de este mundo tan tecnológico, creando y expandiendo mis conocimientos.
             </p>
+            <h2>Habilidades y conocimientos</h2>
+            <p class="align-left">
+                Cuento con una fluidez en el idioma ingles, niveles basicos de frances, 
+                me considero bueno en resolver problemas, una cualidad que sigo puliendo 
+                y que creo que es muy importante en mi entorno.
+            </p>
         </div>
+        <div class="section">
+            <h2>Experiencia Laboral</h2>
+            <div>
+                <p><strong>Empresa:</strong> <a href="https://saksoftsv.com/" target="_blank">SakSoftsv</a></p>
+                <p><strong>Puesto:</strong> Programador</p>
+                <p><strong>Ubicación:</strong> San Salvador, El Salvador</p>
+                <p><strong>Fechas:</strong> Junio 2024 - Presente</p>
+                <p>
+                    Saksoftsv es una empresa dedidacada a desarrollar softwares orientados a auditoria y facturación electrónica
+                </p>
+            </div>
+        </div>        
         <footer class="section">
-            <strong>Created by:</strong> Eduardo Linares
+            <strong>Creador por:</strong> Eduardo Linares
         </footer>
     </div>
 </body>
