--- a/Tareas/Tarea1/estudios.html
+++ b/Tareas/Tarea1/estudios.html
@@ -49,6 +49,17 @@
                     <td>Carrera</td>
                     <td>Ingeniería Informática (Cursando actualmente)</td>
                 </tr>
+                <tr>
+                    <td><strong>Educación de Idiomas:</strong></td>
+                </tr>
+                <tr>
+                    <td>Institución</td>
+                    <td>Escuela Americana (Ingles - Nivel: Avanzado)</td>
+                </tr>
+                <tr>
+                    <td>Institución</td>
+                    <td>Alianza Francesa (Frances - Nivel: Basico)</td>
+                </tr>
             </table>
         </div>
 
