--- a/Tareas/Tarea1/intereses.html
+++ b/Tareas/Tarea1/intereses.html
@@ -24,6 +24,14 @@
                 </ul>
             </nav>
         </div>
+        <div class="section">
+            <h2>Intereses y hobbies</h2>    
+            <p class="align-left">
+                Me gusta mucho jugar videojuegos, ver series, escuchar musica,
+                Ver youtube, aprender mas sobre temas tecnologicos,
+                spasar tiempo de calidad con mis seres queridos
+            </p>
+        </div>
             <h2>Video sobre Apex (Videojuego Favorito)</h2>
         <div class="section">
             <iframe width="450" height="350" src="https://www.youtube.com/embed/ThSKocfe5QE" title="Apex Legends Season
@@ -37,11 +45,7 @@
         </div>
         <footer class="section"> 
             <p>&copy; 2024 Eduardo Antonio Linares Funes. Derechos reservados.</p>
-            <p>Este sitio utiliza videos incrustados de YouTube y canciones de Spotify. Todos los derechos de los medios pertenecen a sus respectivos propietarios.</p>
-            <!--
-                Asistencia para la implementación de derechos reservados proporcionada por ChatGPT de Open AI.
-                Fecha: 23 de agosto de 2024.
-            -->
+            <p><a href="https://github.com/EduardoL115/PW02204" target="_blank">Repositorio Github</a></p>
         </footer>
 </body>
 
